--- a/.eslintrc
+++ b/.eslintrc
@@ -14,9 +14,10 @@
     ],
     "rules": {
         "prettier/prettier": ["error", {"singleQuote": true, "parser": "flow"}],
+        "react/jsx-filename-extension": "off",
         "no-underscore-dangle": "off",
         "comma-dangle": "off",
         "object-curly-spacing": "off",
-        "react/jsx-filename-extension": "off"
+        "no-unused-expressions": ["error", {"allowTaggedTemplates": true}]
     }
 }
