--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.11",
-    "slugify": "^1.1.0"
+    "slugify": "^1.1.0",
+    "styled-components": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
