--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,14 @@
 {
-    "extends": [
-        "airbnb",
-        "prettier",
-        "prettier/react"
-    ],
-    "env": {
-        "browser": true,
-    },
-    "plugins": [
-        "prettier",
-        "import",
-        "react"
-    ],
-    "rules": {
-        "prettier/prettier": ["error", {"singleQuote": true, "parser": "flow"}],
-        "react/jsx-filename-extension": "off",
-        "no-underscore-dangle": "off",
-        "comma-dangle": "off",
-        "object-curly-spacing": "off",
-        "no-unused-expressions": ["error", {"allowTaggedTemplates": true}]
-    }
+  "extends": ["airbnb"],
+  "env": {
+    "browser": true
+  },
+  "plugins": ["import", "react", "prettier"],
+  "rules": {
+    "react/jsx-filename-extension": "off",
+    "no-underscore-dangle": "off",
+    "comma-dangle": "off",
+    "object-curly-spacing": "off",
+    "no-unused-expressions": ["error", { "allowTaggedTemplates": true }]
+  }
 }
